--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "color-blind",
+  "name": "color-blind-esm",
   "description": "Simulate color blindness by converting RGB hex codes",
   "version": "0.1.3",
-  "homepage": "https://github.com/skratchdot/color-blind",
+  "homepage": "https://github.com/jorenbroekema/color-blind",
   "author": {
-    "name": "skratchdot",
-    "email": "git@skratchdot.com"
+    "name": "jorenbroekema",
+    "email": "jorenbroekema@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/skratchdot/color-blind.git"
+    "url": "git://github.com/jorenbroekema/color-blind.git"
   },
   "bugs": {
-    "url": "https://github.com/skratchdot/color-blind/issues"
+    "url": "https://github.com/jorenbroekema/color-blind/issues"
   },
   "licenses": [
     {
@@ -24,20 +24,25 @@
       "url": "https://spdx.org/licenses/CC-BY-SA-4.0.html"
     }
   ],
-  "main": "lib/color-blind",
+  "files": [
+    "lib"
+  ],
+  "exports": {
+    ".": "./lib/color-blind.js"
+  },
   "engines": {
     "node": ">= 14"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "web-test-runner --coverage"
   },
   "dependencies": {
-    "onecolor": "^3.1.0"
+    "colorjs.io": "^0.5.1"
   },
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-jshint": "^2.1.0",
-    "gulp-nodeunit": "^0.1.0"
+    "@web/test-runner": "^0.18.2",
+    "@web/test-runner-playwright": "^0.11.0",
+    "chai": "^5.1.1"
   },
   "keywords": [
     "color",
